tekton-pipeline/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: php-app-dc
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        traffic: "true"
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/development-tosin/welcome-php
          imagePullPolicy: Always
          name: welcome-php
          ports:
            - containerPort: 8080
              protocol: "TCP"
