tekton-pipeline/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: tektoncd-nodejs-tutorial-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tektoncd-nodejs-tutorial-service
